# FdbStore

./: .gitignore  Cargo.toml  README.md  codebook.toml
.github/workflows/: rust.yml
fdb_derive/: Cargo.toml  README.md
fdb_derive/src/: lib.rs
fdb_trait/: Cargo.toml
fdb_trait/src/: error.rs  lib.rs
tests/: Cargo.toml
tests/src/: test.rs
