[package]
  name = "fdb_derive"
  version = "0.1.0"
  edition = "2024"

[lib]
  proc-macro = true
  path = "src/lib.rs"

[dependencies]
  proc-macro2 = "1.0"
  quote = "1.0"
  syn = { version = "1.0", features = ["full"] }
  serde = { version = "1.0", features = ["derive"] }
  rmp-serde = "1.1"
  fdb_trait = { path = "../fdb_trait" }
  async-trait = "0.1.88"
