[package]
  name = "fdb_derive"
  version = "0.1.1"
  edition = "2024"
  license = "Apache-2.0"
  authors = ["bastien vigneron"]
  categories = ["database"]
  description = "A simple derive macro to manage structs persistence in FoundationDB with secondary indexes automatic management"
  homepage = "https://github.com/BastienVigneron/FdbStore"
  repository = "https://github.com/BastienVigneron/FdbStore"

[lib]
  proc-macro = true
  path = "src/lib.rs"

[dependencies]
  proc-macro2 = "1.0"
  quote = "1.0"
  syn = { version = "1.0", features = ["full"] }
  serde = { version = "1.0", features = ["derive"] }
  rmp-serde = "1.1"
  fdb_trait = "0.1.1"
  async-trait = "0.1.88"
