[package]
  name = "fdb_trait"
  version = "0.1.0"
  edition = "2024"
  authors = ["bastien vigneron"]
  categories = ["database", "foundationdb", "orm"]
  description = "A simple derive macro to manage structs persistence in FoundationDB with secondary indexes automatic management"
  homepage = "https://github.com/BastienVigneron/FdbStore"
  repository = "https://github.com/BastienVigneron/FdbStore"

[dependencies]
  async-trait = "0.1.88"
  thiserror = "2.0.12"
  foundationdb = { version = "0.9.2", features = [
    "embedded-fdb-include",
    "fdb-7_1",
  ] }
  tokio = { version = "1.28.0", features = ["full"] }
  serde = { version = "1.0", features = ["derive"] }
  rmp-serde = "1.1"
  moka = { version = "0.12.10", features = ["sync"] }
  ulid = { version = "1.2.1", features = ["serde"] }
